--- a/css/index.css
+++ b/css/index.css
@@ -15,8 +15,7 @@ nav img{
     
     text-align: center;
     margin-top: 30px;
-    margin-left: 10px;
-    margin-right: 10px;
+    
 
 }
 .modal-dialog{
@@ -48,4 +47,9 @@ nav img{
 }
 .footer-area{
     background-color: aliceblue;
+}
+.primary button{
+    margin-left:10px;
+    margin-top: 5px;
+    
 }
