--- a/css/index.css
+++ b/css/index.css
@@ -1,23 +1,36 @@
+
+/*body font decorated*/
 body{
     font-family: 'Righteous', cursive;
 }
+
+/*navbar image size adjusted*/
 .navbar img{
     height:50px;
     width:75px;
 
 }
+
+/*carousel slide margin adjusted*/
 .carousel slide{
     margin-top: 20px;
 }
+.head-title{
+    text-transform:uppercase;
+}
 
-
+/*jumbotron alignment*/
 .jumbotron{
     
     text-align: center;
     margin-top: 30px;
-    
+    }
 
+    .display-6{
+        text-transform: uppercase;
 }
+
+/*modal box decorated*/
 .modal-dialog{
     padding: 8%;
 }
@@ -28,10 +41,14 @@ body{
 .modal-body a{
     color: black;
 }
+.modal-title{
+    text-transform: uppercase;
+}
 .container p{
     margin-top: 20px;
 }
 
+/*footer widget*/
 .single-footer-widget a{
     font-size: 30px;
     margin-right: 20px;
@@ -44,9 +61,9 @@ body{
 
 .container{
     margin-top: 20px;
-    
-
 }
+
+/*footer decorated*/
 .footer-area{
     background-color: aliceblue;
 }
@@ -55,14 +72,20 @@ body{
     margin-top: 2px;
     
 }
+.pane{
+    margin-top: 20px;
+}
 
 .container2{
     text-align: right;
     position: relative;
-    bottom: 10px;
+    bottom: 50px;
 
 }
 .container2 button{
     margin-left:2px;
     margin-top: 1px;
+}
+.footer-text{
+    margin-left: 40px;
 }
